test/files/pos/t9111/C.scala
class C {
  val i = new A.Inner()
  println(i.newT())
}
